Fixed Spacing Issues

--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -65,6 +65,12 @@ button:disabled {
   margin-right: 10px;
 }
 
+.brand {
+  display: flex;
+  justify-content: center;
+  padding: 20px;
+}
+
 .body {
   align-content: center;
   z-index: 2;
@@ -82,7 +88,33 @@ button:disabled {
   width: 175px;
 }
 
+@media only screen and (min-width: 320px) {
+  .head {
+    padding-top: 10px;
+  }
+
+  .pants svg {
+    margin-top: -42px;
+    z-index: -3;
+    margin-left: 26px;
+    width: 140px;
+  }
+
+  .brand {
+    justify-content: center;
+    padding: 30px;
+  }
+
+  .blurb {
+    justify-content: center;
+    padding: 20px;
+  }
+}
+
 @media only screen and (min-width: 375px) {
+  .head {
+    padding-top: 10px;
+  }
   .pants svg {
     margin-top: -42px;
     z-index: -3;
@@ -92,7 +124,7 @@ button:disabled {
 
   .brand {
     justify-content: center;
-    padding: 40px 0;
+    padding: 30px;
   }
 
   .blurb {
@@ -102,23 +134,26 @@ button:disabled {
 }
 
 @media only screen and (min-width: 768px) {
-    .pants svg {
-      margin-top: -46px;
-      z-index: -3;
-      margin-left: 26px;
-      width: 176px;
-    }
-
-    .brand {
-      justify-content: center;
-      padding: 40px 0;
-    }
-
-    .blurb {
-      justify-content: center;
-      padding: 20px;
-    }
+  .head {
+    padding-top: 10px;
   }
+  .pants svg {
+    margin-top: -46px;
+    z-index: -3;
+    margin-left: 26px;
+    width: 176px;
+  }
+
+  .brand {
+    justify-content: center;
+    padding: 30px;
+  }
+
+  .blurb {
+    justify-content: center;
+    padding: 20px;
+  }
+}
 
 @media only screen and (min-width: 1024px) {
   .pants svg {
@@ -139,24 +174,19 @@ button:disabled {
 }
 
 @media only screen and (min-width: 1920px) {
-    .pants svg {
-      margin-top: -46px;
-      z-index: -3;
-      margin-left: 28px;
-      width: 180px;
-    }
+  .pants svg {
+    margin-top: -46px;
+    z-index: -3;
+    margin-left: 28px;
+    width: 180px;
   }
+}
 
 .title {
   text-transform: uppercase;
   border-bottom: 2px solid #fff;
   margin-bottom: 24px;
   color: #fff;
-}
-
-.brand {
-  display: flex;
-  justify-content: center;
 }
 
 label {
